Fixed squished email & score. Removed first and last name.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -39,6 +39,10 @@
   display: none;
 }
 
+.remove-bullets {
+  list-style: none;
+}
+
 .team_image {
   height: 100px;
   width: 100px;
